style changes and fixed viewport width resetting when lines scroll out of view

--- a/src/components/AstroEditor/AstroEditor.scss
+++ b/src/components/AstroEditor/AstroEditor.scss
@@ -44,7 +44,7 @@
     flex-grow: 1;
     white-space: pre;
     outline: none;
-    min-height: fit-content;
+    min-height: 100%;
     caret-color: transparent;
     font-family: "Droid Sans Mono", "monospace", monospace;
     font-weight: normal;
