--- a/src/components/Line/Line.scss
+++ b/src/components/Line/Line.scss
@@ -2,6 +2,7 @@
     color: black;
     position: absolute;
     transform: translate3d(0px, 6px, 0px);
+    width: 100%;
 }
 
 .empty-line-placeholder {
