--- a/src/components/ScrollbarThin/ScrollbarThin.scss
+++ b/src/components/ScrollbarThin/ScrollbarThin.scss
@@ -31,6 +31,7 @@
 .scrollable-content {
     width: 100%;
     height: 30px;
+    z-index: 999;
     display: flex;
     flex-direction: row;
     align-items: center;
