--- a/src/components/TabWrapper/TabWrapper.scss
+++ b/src/components/TabWrapper/TabWrapper.scss
@@ -1,7 +1,7 @@
 .tabs-wrapper-outer {
   display: flex;
   flex-direction: column;
-  z-index: 99;
+  z-index: 999;
   
   .tabs-wrapper {
       height: 30px;
@@ -13,6 +13,6 @@
       -moz-user-select: none;
       -webkit-user-select: none;
       background-color: #9c9c9c;
-      z-index: 99;
+      z-index: 999;
     }
 }
